--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png">
-    <title>Links</title>
+    <title>AI</title>
 
     <style>
         :root {
@@ -172,9 +172,7 @@
 <body>
 <div class="wrap">
     <header>
-        <h1>
-            Project
-            links</h1>
+        <h1>AI Project Links</h1>
         <p class="hint">
             Projects
             created
