--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png">
     <title>AI</title>
-
     <style>
         :root {
             --bg0: #0b1020;
@@ -19,7 +18,6 @@
             --shadow: 0 20px 60px rgba(0, 0, 0, .45);
             --radius: 18px;
         }
-
         @media (prefers-color-scheme: light) {
             :root {
                 --bg0: #f6f7fb;
@@ -31,11 +29,9 @@
                 --shadow: 0 16px 50px rgba(18, 24, 40, .14);
             }
         }
-
         * {
             box-sizing: border-box;
         }
-
         body {
             margin: 0;
             min-height: 100dvh;
@@ -48,11 +44,9 @@
             place-items: center;
             padding: 28px 16px;
         }
-
         .wrap {
             width: min(920px, 100%);
         }
-
         header {
             display: flex;
             justify-content: space-between;
@@ -60,19 +54,16 @@
             gap: 14px;
             margin-bottom: 14px;
         }
-
         h1 {
             margin: 0;
             font-size: clamp(20px, 2.5vw, 28px);
             letter-spacing: .2px;
         }
-
         .hint {
             margin: 0;
             color: var(--muted);
             font-size: 14px;
         }
-
         .card {
             background: var(--card);
             border: 1px solid var(--border);
@@ -81,11 +72,9 @@
             overflow: hidden;
             backdrop-filter: blur(10px);
         }
-
         nav {
             padding: 8px;
         }
-
         ul {
             list-style: none;
             margin: 0;
@@ -93,7 +82,6 @@
             display: grid;
             gap: 10px;
         }
-
         a.link {
             display: grid;
             grid-template-columns: 1fr auto;
@@ -107,37 +95,30 @@
             background: rgba(255, 255, 255, .06);
             transition: transform .12s ease, background .12s ease, border-color .12s ease;
         }
-
         a.link:hover {
             transform: translateY(-1px);
             border-color: rgba(124, 92, 255, .35);
             background: rgba(124, 92, 255, .12);
         }
-
         a.link:active {
             transform: translateY(0);
         }
-
         a.link:focus-visible {
             outline: 2px solid var(--accent);
             outline-offset: 3px;
         }
-
         .title {
             display: grid;
             gap: 2px;
         }
-
         .name {
             font-weight: 650;
             letter-spacing: .15px;
         }
-
         .desc {
             font-size: 13px;
             color: var(--muted);
         }
-
         .chip {
             font-size: 12px;
             color: var(--text);
@@ -147,7 +128,6 @@
             background: linear-gradient(90deg, rgba(124, 92, 255, .18), rgba(46, 233, 166, .14));
             white-space: nowrap;
         }
-
         footer {
             margin-top: 12px;
             color: var(--muted);
@@ -157,7 +137,6 @@
             gap: 12px;
             flex-wrap: wrap;
         }
-
         .kbd {
             font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", monospace;
             padding: 2px 8px;
@@ -168,7 +147,6 @@
         }
     </style>
 </head>
-
 <body>
 <div class="wrap">
     <header>
@@ -178,9 +156,9 @@
             created
             by
             ai
-            agents</p>
+            agents
+        </p>
     </header>
-
     <section
             class="card"
             aria-label="Links card">
@@ -191,34 +169,38 @@
                        href="/weather/index.html"
                        target="_blank"
                        rel="noopener noreferrer">
-              <span class="title">
-                <span class="name">Weather</span>
-                <span class="desc">weather of today</span>
-              </span>
+                     <span class="title">
+                     <span class="name">Weather</span>
+                     <span class="desc">weather of today</span>
+                     </span>
                         <span class="chip">Open</span>
                     </a>
                 </li>
-
                 <li>
-                    <a class="link"
-                       href="/question-answer/index.html"
-                       target="_blank"
-                       rel="noopener noreferrer">
-              <span class="title">
-                <span class="name">Question Answer</span>
-                <span class="desc">question and answer</span>
-              </span>
+                    <a class="link" href="/question-answer/index.html" target="_blank" rel="noopener noreferrer">
+                     <span class="title">
+                     <span class="name">Question Answer</span>
+                     <span class="desc">question and answer</span>
+                     </span>
+                        <span class="chip">Open</span>
+                    </a>
+                </li>
+                <li>
+                    <a class="link" href="/chat/index.html" target="_blank" rel="noopener noreferrer">
+                     <span class="title">
+                     <span class="name">Chat</span>
+                     <span class="desc">chat system</span>
+                     </span>
                         <span class="chip">Open</span>
                     </a>
                 </li>
             </ul>
         </nav>
     </section>
-
     <footer>
-        <span>Tip: Use <span
-                class="kbd">Tab</span> to move focus and <span
-                class="kbd">Enter</span> to open</span>
+            <span>Tip: Use <span
+                    class="kbd">Tab</span> to move focus and <span
+                    class="kbd">Enter</span> to open</span>
         <span>mhkarami97.ir</span>
     </footer>
 </div>
