--- a/question-answer/index.html
+++ b/question-answer/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>سیستم پرسش و پاسخ</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -14,6 +17,8 @@
                 <input type="text" id="username" placeholder="نام کاربری خود را وارد کنید" />
                 <button id="setUsername" class="btn btn-primary">ثبت نام کاربری</button>
                 <button id="exportBtn" class="btn btn-secondary">📥 خروجی JSON</button>
+                <button id="importBtn" class="btn btn-secondary">📤 ورودی JSON</button>
+                <input type="file" id="importFile" accept=".json" style="display: none;" />
             </div>
         </header>
 
@@ -33,3 +38,4 @@
     <script src="app.js"></script>
 </body>
 </html>
+
