Enhance chat functionality with shared token for message sending; update UI notes and add image compression feature with drag-and-drop support

--- a/chat/index.html
+++ b/chat/index.html
@@ -56,7 +56,10 @@
                 <button id="saveTokenBtn">ذخیره Token</button>
                 <p class="note">⚠️ Token شما فقط در مرورگر شما ذخیره می‌شود و به سرور ارسال نمی‌شود</p>
                 <p class="note" style="margin-top: 10px;">
-                    📝 <strong>نکته مهم:</strong> برای اینکه همه کاربران بتوانند با هم چت کنند، باید Gist ID مشترک را در فایل script.js قرار دهید (متغیر SHARED_GIST_ID). اولین کاربری که Token دارد، Gist را ایجاد می‌کند و Gist ID را دریافت می‌کند.
+                    📝 <strong>نکته مهم:</strong> برای اینکه همه کاربران بتوانند پیام ارسال کنند، باید یک Token مشترک در فایل script.js قرار دهید (متغیر SHARED_TOKEN). این Token باید دسترسی <code>gist</code> داشته باشد و بتواند روی Gist مشترک بنویسد.
+                </p>
+                <p class="note" style="margin-top: 10px; background: #fff3cd; padding: 10px; border-radius: 5px;">
+                    💡 <strong>راه حل:</strong> یک Token مخصوص برای این چت ایجاد کنید و آن را در متغیر SHARED_TOKEN در فایل script.js قرار دهید. به این ترتیب همه کاربران می‌توانند بدون نیاز به وارد کردن Token، پیام ارسال کنند.
                 </p>
             </div>
         </div>
