--- a/index.html
+++ b/index.html
@@ -374,6 +374,33 @@
                         <span class="chip">Open</span>
                     </a>
                 </li>
+                <li>
+                    <a class="link" href="/habit/index.html" target="_blank" rel="noopener noreferrer">
+                     <span class="title">
+                     <span class="name">Habit</span>
+                     <span class="desc">track your habits</span>
+                     </span>
+                        <span class="chip">Open</span>
+                    </a>
+                </li>
+                <li>
+                    <a class="link" href="/time-tracker/index.html" target="_blank" rel="noopener noreferrer">
+                     <span class="title">
+                     <span class="name">Time Tracker</span>
+                     <span class="desc">track your time</span>
+                     </span>
+                        <span class="chip">Open</span>
+                    </a>
+                </li>
+                <li>
+                    <a class="link" href="/check-list/index.html" target="_blank" rel="noopener noreferrer">
+                     <span class="title">
+                     <span class="name">Check List</span>
+                     <span class="desc">manage your checklists</span>
+                     </span>
+                        <span class="chip">Open</span>
+                    </a>
+                </li>
             </ul>
         </nav>
     </section>
