--- a/index.html
+++ b/index.html
@@ -2,12 +2,7 @@
 <html lang="fa"
       dir="rtl">
 <head>
-    <title>
-        ابزارهای
-        وب
-        |
-        Web
-        Tools</title>
+    <title>Web Tools</title>
     <meta charset="utf-8"/>
     <meta name="viewport"
           content="width=device-width, initial-scale=1"/>
