feat: implement update notification system with service worker integration

--- a/index.html
+++ b/index.html
@@ -32,6 +32,19 @@
           href="/style.css">
 </head>
 <body>
+<!-- Update Notification -->
+<div id="updateNotification" class="update-notification hidden">
+    <div class="update-content">
+        <span class="update-icon">🔄</span>
+        <div class="update-text">
+            <strong>نسخه جدید موجود است!</strong>
+            <p>برای استفاده از آخرین نسخه، صفحه را به‌روزرسانی کنید.</p>
+        </div>
+        <button id="updateButton" class="update-button">به‌روزرسانی</button>
+        <button id="dismissUpdate" class="dismiss-button" title="بستن">✕</button>
+    </div>
+</div>
+
 <div class="wrap">
     <header>
         <div class="header-content">
