--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="theme-color"
           content="#7c5cff"/>
     <meta name="description"
-          content="مجموعه ابزارهای آنلاین ساخته شده با هوش مصنوعی - Web Tools Collection"/>
+          content="مجموعه ابزارهای آنلاین کاربردی - Web Tools Collection"/>
     <meta name="apple-mobile-web-app-capable"
           content="yes"/>
     <meta name="apple-mobile-web-app-status-bar-style"
@@ -52,12 +52,7 @@
             <p class="hint">
                 مجموعه
                 ابزارهای
-                آنلاین
-                ساخته
-                شده
-                با
-                هوش
-                مصنوعی</p>
+                کاربردی</p>
         </div>
         <div style="display: flex; gap: 12px; align-items: center;">
             <div class="search-box">
@@ -110,10 +105,8 @@
     </section>
 
     <footer>
-        <span>استفاده از <span
-                class="kbd">Tab</span> برای حرکت و <span
-                class="kbd">Enter</span> برای باز کردن</span>
-        <span>mhkarami97.ir</span>
+        <span>طراحی توسط <a href="https://mhkarami97.ir">محمد حسین کرمی</a> </span>
+        <span><a href="https://mhkarami97.ir">mhkarami97.ir</a></span>
     </footer>
 </div>
 
